--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/node": "^13.7.7",
     "@types/react": "^16.9.23",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "extrapolished": "^0.0.1",
     "hoist-non-react-statics": "^3.3.2",
     "react": "^16.13.0",
-    "react-use": "^13.27.0",
     "rollup": "^1.32.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-sourcemaps": "^0.5.0",
@@ -62,7 +66,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.149",
-    "lodash": "^4.17.15"
+    "@types/lodash-es": "^4.17.3",
+    "lodash-es": "^4.17.15",
+    "react-use": "^13.27.0"
   }
 }
